2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.pk: New file.
	* poke/Makefile.am (dist_pkgdata_DATA): Add pk-table.pk.
	* poke/pk-settings.pk (pk_settings_dump): Use pk_table.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (pk_map_alien_token_handler): Remove spurious
	trace.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_pr_loop_stmt): New handler.
	(pkl_phase_trans1): Register handler.
	(pkl_trans1_ps_loop_stmt): for-loops with decl heads also
	introduce a lexical scope.
	* testsuite/poke.pkl/struct-method-18.pk: New test.
	* testsuite/poke.pkl/struct-method-19.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-help.pk: Support a synopsis entry for "settings" help
	entries.
	* poke/pk-settings.pk: Set the synopsis of help entries to
	`usage'.
	Make `setter' to return a boolean.

2022-01-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-help.pk: Document .set without arguments.

2022-01-16  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/pk-bin2poke.in: Handle command-line argument --var/-v.

2022-01-16  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/pk-strings.in: Add emacs local variables.
	* utils/pk-bin2poke.in: Likewise.

2022-01-16  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev-stream.c (ios_dev_stream_pread): Fix handling of
	errors and EOF in buffer write-back.
	* libpoke/ios-buffer.c (ios_buffer_allocate_new_chunk): Use IOD_OK
	instead of 0.
	(ios_buffer_pread): Likewise.
	(ios_buffer_pwrite): Likewise.
	(ios_buffer_forget_till): Likewise.

2022-01-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/lib/poke.exp (tests_pattern): New variable.
	(tests_pattern_pk): Likewise.
	* testsuite/poke.cmd/cmd.exp: Use `tests_pattern`.
	* testsuite/poke.map/map.exp: Likewise.
	* testsuite/poke.pickles/pickles.exp: Likewise.
	* testsuite/poke.pkl/pkl.exp: Likewise.