@@ -1,5 +1,10 @@
 2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-set.c (pk_cmd_set_dump): Make an hyperlink for
+	error-on-warning.
+
+2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-table.pk: New file.
 	* poke/Makefile.am (dist_pkgdata_DATA): Add pk-table.pk.
 	* poke/pk-settings.pk (pk_settings_dump): Use pk_table.
